crates/cli_bin/tests/snapshots/apply__multifile_terraform_apply.snap
---
source: crates/cli_bin/tests/apply.rs
expression: "String::from_utf8(output.stdout)?"
---
./main.tf
     locals {
    -  nice = "old"
    +  nice = "multifile"
     }
    

Processed 1 files and found 0 matches
