crates/cli_bin/tests/snapshots/apply__nested_dir.snap
---
source: apps/marzano/cli/tests/apply.rs
expression: content
---
default_options = {
  priority: "Hello",
  color: "Hello"
}

