crates/cli_bin/tests/snapshots/apply__python_notebook_basic.snap
---
source: crates/cli_bin/tests/apply.rs
expression: content
---
{
  "cells": [
    {
      "cell_type": "code",
      "execution_count": null,
      "id": "5e3cb542-933d-4bf3-a82b-d9d6395a7832",
      "metadata": {
        "tags": []
      },
      "outputs": [],
      "source": ["flint(4)\nflint(\"3\")\nflint(5)"]
    }
  ],
  "metadata": {
    "kernelspec": {
      "display_name": "conda210",
      "language": "python",
      "name": "conda210"
    },
    "language_info": {
      "codemirror_mode": {
        "name": "ipython",
        "version": 3
      },
      "file_extension": ".py",
      "mimetype": "text/x-python",
      "name": "python",
      "nbconvert_exporter": "python",
      "pygments_lexer": "ipython3",
      "version": "3.9.16"
    }
  },
  "nbformat": 4,
  "nbformat_minor": 5
}
