crates/cli_bin/tests/snapshots/apply__python_with_tabs.snap
---
source: apps/marzano/cli/tests/apply.rs
expression: content
---
for i in range(1):
	for j in range(1):
		for i in range(2):
			print(i, "Hello, world!")
		
		for i in range(2):
			print(i, "Hello, world!")
		


