crates/cli_bin/tests/snapshots/apply__random_int.snap
---
source: apps/marzano/cli/tests/apply.rs
expression: content
---
const list1 = [0, 0, 1, 0, 0, 1, 0, 0, 0, 0];
const list2 = [0, 0, 1, 1, 0, 0, 0, 1, 0, 0];
const list3 = [1, 1, 1, 1, 1, 1, 0, 0, 0, 1];
