crates/cli_bin/tests/snapshots/apply__tty_behavior.snap
---
source: crates/cli_bin/tests/apply.rs
expression: content
---
this list:
  - item: one
    description: |
      This is a description
      that spans multiple lines
  - item: two
map:
  stuff: good
  things: bad
  indented:
    item: map
    items: two
