crates/cli_bin/tests/snapshots/apply__yaml_padding.snap
---
source: apps/marzano/cli/tests/apply.rs
expression: content
---
this list:
  - nice: car
    second: detail
  - item: two
map:
  stuff: good
  things: bad
  indented:
    item: pig
    distro: true
